@@ -111,11 +111,18 @@ include_once('include/page_header.php');
 
 //-------------
 // GROUPS
-	$dashForm = new CFormTable(S_FILTER);
-	$dashForm->addVar('form_refresh', 1);
+	$divTabs = new CTabView(array('remember'=>1));
+	if(!isset($_REQUEST['form_refresh']))
+		$divTabs->setSelected(0);
+
+	$dashForm = new CForm();
 	$dashForm->setName('dashconf');
 	$dashForm->setAttribute('id', 'dashform');
 
+	$form_refresh = get_request('form_refresh', 0);
+	$dashForm->addVar('form_refresh', ++$form_refresh);
+
+	$dashList = new CFormList('dashlist');
 	if(isset($_REQUEST['form_refresh'])){
 		$filterEnable = get_request('filterEnable', 0);
 
@@ -155,7 +162,7 @@ include_once('include/page_header.php');
 		$cbFilter->setAttribute('onclick', "$('dashform').enable(); create_var('" . $dashForm->getName() . "', 'filterEnable', 1, true);");
 	}
 
-	$dashForm->addRow(S_DASHBOARD_FILTER, $cbFilter);
+	$dashList->addRow(S_DASHBOARD_FILTER, $cbFilter);
 
 	$dashForm->addVar('groupids', $groupids);
 
@@ -165,7 +172,7 @@ include_once('include/page_header.php');
 
 	if(!$filterEnable) $cmbGroups->setAttribute('disabled', 'disabled');
 
-	$dashForm->addRow(S_HOST_GROUPS, $cmbGroups);
+	$dashList->addRow(S_HOST_GROUPS, $cmbGroups);
 
 	if($grpswitch == 1){
 		$options = array(
@@ -190,7 +197,7 @@ include_once('include/page_header.php');
 		$delButton = new CButton('delete', S_DELETE_SELECTED);
 		$delButton->setEnabled($filterEnable);
 
-		$dashForm->addRow(
+		$dashList->addRow(
 			S_GROUPS,
 			array($lstGroups, BR(), $addButton, $delButton)
 		);
@@ -201,7 +208,7 @@ include_once('include/page_header.php');
 	$cbMain = new CCheckBox('maintenance', $maintenance, null, '1');
 	if(!$filterEnable) $cbMain->setAttribute('disabled', 'disabled');
 
-	$dashForm->addRow(S_HOSTS, array($cbMain, S_SHOW_HOSTS_IN_MAINTENANCE));
+	$dashList->addRow(S_HOSTS, array($cbMain, S_SHOW_HOSTS_IN_MAINTENANCE));
 
 // Trigger
 	$severity = zbx_toHash($severity);
@@ -223,7 +230,7 @@ include_once('include/page_header.php');
 	}
 	array_pop($trgSeverities);
 
-	$dashForm->addRow(S_TRIGGERS_WITH_SEVERITY, $trgSeverities);
+	$dashList->addRow(S_TRIGGERS_WITH_SEVERITY, $trgSeverities);
 
 	$config = select_config();
 	$cb = new CComboBox('extAck', $extAck);
@@ -236,10 +243,19 @@ include_once('include/page_header.php');
 	if(!$config['event_ack_enable']){
 		$cb->setAttribute('title', S_EVENT_ACKNOWLEDGING_DISABLED);
 	}
-	$dashForm->addRow(S_PROBLEM_DISPLAY, $cb);
+	$dashList->addRow(S_PROBLEM_DISPLAY, $cb);
 //-----
 
-	$dashForm->addItemToBottomRow(new CSubmit('save', S_SAVE));
+	$divTabs->addTab('dashFilterTab', S_FILTER, $dashList);
+// } EXT PROFILE WIDGET
+
+	$dashForm->addItem($divTabs);
+
+// Footer
+	$main = array(new CSubmit('save', S_SAVE));
+	$others = array();
+
+	$dashForm->addItem(makeFormFooter($main, $others));
 
 	$dashboard_wdgt->addItem($dashForm);
 	$dashboard_wdgt->show();
@@ -248,4 +264,5 @@ include_once('include/page_header.php');
 <?php
 
 include_once('include/page_footer.php');
+
 ?>
