@@ -93,6 +93,8 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.5rc1
 
+ - [ZBX-3514] removed non "regexp" triggers from item log-form menu (Aly)
+ - [ZBX-3584] fixed allowed_hosts set to 'localhost' for items by default (Vedmak)
  - [ZBX-3568] fixed processing of trigger functions with macros in item key parameters in notifications (Sasha)
  - [ZBX-3076] disabled generation of events in case if some items or hosts in trigger expression are not active (Sasha)
  - [ZBX-3562] fixed user macros in map element label expressions (Aly)
